syntax = "proto3";

package errors;

import "errors/errors.proto";
option go_package = "./;errors";


enum ErrorReason {
  // 设置缺省错误码
  option (errors.default_code) = 400;

  NotFound = 0[(errors.message)="数据不存在"];
  Database = 1[(errors.message)="数据库错误"];
  Transform = 2[(errors.message)="数据转换失败"];
  DeleteNotDisabledWorker = 3[(errors.message)="不能删除非未激活的节点"];
  EnableNotDisabledWorker = 4[(errors.message)="不能启动非未激活的节点"];
  DisableNotEnableWorker = 5[(errors.message)="不能禁用非激活的节点"];
  CronSpec = 6[(errors.message)="定时表达式错误"];
  EnableCron = 7[(errors.message)="启用定时任务失败"];
  DisableCron = 8[(errors.message)="启用定时任务失败"];
  DeleteNotDisabledTask = 9[(errors.message)="不能删除非未激活的任务"];
  EnableNotDisabledTask = 10[(errors.message)="不能启动非未激活的任务"];
  DisableNotEnableTask = 11[(errors.message)="不能禁用非激活的任务"];
  UpdateNotEnableTask = 12[(errors.message)="不能更新非激活的任务"];
  NotSupportTaskType = 13[(errors.message)="错误的任务类型"];
  ExecTaskFail = 14[(errors.message)="执行任务失败"];
  WorkerNotAvailable = 15[(errors.message)="节点不可用"];
}


